# ocrspell

./: README
man/: ocrspell.1
src/: Makefile.in  addaptive_stats.c  addaptive_stats.h  cnf.c  cnf.h  config.h.in  configure.in  copyright.h  intelligent_nonalpha_handler.c  intelligent_nonalpha_handler.h  ispell_emulate.c  ispell_emulate.h  lcs.c  lcs2cnf.c  lcs2cnf.h  learn.c  learn.h  letter_ngram.freq  levelsat.c  levelsat.h  normal.h  ocr.freq  ocr_untrained.freq  ocrgen.c  ocrgen.h  ocrspell.el  quick_demo.txt  spell.c  spell.h  statcheck.c  statcheck.h  stats.c  stats.h  subseq.c  subseq.h
src/lcs2cnf.dir/: Makefile  cnf.c  cnf.h  lcs.c  lcs2cnf.c  subseq.c  subseq.h
